<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="Beranda"/>

    <item
        android:id="@+id/page_2"
        android:icon="@drawable/ic_project"
        android:title="Kategori"/>

    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_test"
        android:title="Toko Saya"/>

    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_description"
        android:title="Transaksi"/>

    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/ic_info"
        android:title="About"/>
</menu>