<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_grid"
        android:title="Grid"
        android:icon="@drawable/ic_grid_view"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/action_list"
        android:title="List"
        android:icon="@drawable/ic_list_view"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/action_profile"
          android:title="Setting"
          android:orderInCategory="100"
        android:visible="false"
          app:showAsAction="never"/>
</menu>
